syntax = "proto3";
package posting;

service Posting {
    rpc craetePost (PostingRequest) returns (PostingResponse);
}

message PostingRequest {
    string title = 1;
    string message = 2;
}

message PostingResponse {
    string title = 1;
    string message = 2;
}